JaCoCo Plugin is installed. Coverage is Higher